update index page's title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>home_my work page mobile</title>
+  <title>home_my work page</title>
 </head>
 <body>
 <header>
@@ -61,7 +61,7 @@
           <a href="">view project</a>
         </div>
       </div>
-  </main>
+</main>
   <footer id="contact">
     <a href="#contact">Contact</a>
     <a href="about.html#skills">My Skills</a>
