--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>home_my work page mobile</title>
+  <title>home_my work page</title>
 </head>
 <body>
 <header>
