link index page to project page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h3>Beauty Adored</h3>
           <p>When creating Beauty Adored, I took inspiration from my own experiences, conducted a competitive analysis to look at the strengths and weaknesses of current apps, and identified opportunities to fulfill an unmet need. After identifying the need, a user flow diagram, iOS, and Android wireframes, style guide, prototype, mockups, and final UI designs were created to bring the product to life.
           </p>
-          <a href="">view project</a>
+          <a href="beauty adored.html">view project</a>
         </div>
       </div>
       <div>
