update CSS layout for index, about, and project pages

--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 <header>
-  <div>
-    <img src="https://via.placeholder.com/150x50?text=Logo" alt="Roslyn">
+  <div class="container">
+    <img src="logo.svg" alt="Logo"/ class="logo">
     <nav>
-      <ul>
+      <ul class="navigation">
         <li><a href="index.html">Work</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -24,23 +24,31 @@
   </div>
 </header>
 <main>
-  <div>
-    <div>
+  <div id="hero">
+    <div class="container">
       <h1>About</h1>
     </div>
   </div>
-  <div>
-    <div>
-      <picture>
-        <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-        <img src="http://via.placeholder.com/1200x800" alt="My Image">
-      </picture>
-      <div>
-        <div>
+  <div id="work">
+    <div class="container">
+      <div class="row">
+        <picture>
+          <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+            <img src="http://via.placeholder.com/1200x800" alt="My Image">
+          </picture>
+      </div>
+      <div id="work">
+        <div class="container">
           <h2>My Story</h2>
           <p>Hello, my name is Roslyn, and I am a UI designer based in Pennsylvania. Helping people, improving their lives, and being creative are passions of mine. I am dedicated to creating designs and products that go beyond creating something generic but serve to fill a gap and meet a need that is not already being met yet, all while being accessible so that everyone feels included and can enjoy them. My extensive background and experience in healthcare-related fields give me a unique insight into how to meet client's needs better and create better user experiences.</p>
           <p>In my spare time, I enjoy spending time with family and friends, traveling, going on walks, learning new recipes and trying new food, performing dance choreographies with friends, and doing arts and crafts.</p>
-          <a href="" class="button contact">Download my resume</a>
+          <div id="contact"
+            <div class="container">
+              <div class="row">
+                <a href="" class="button contact">Download my resume</a>
+              </div>
+            </div>
+          </div>
         </div>
         <div>
           <h2>Skills & Tools</h2>
@@ -77,7 +85,7 @@
   <footer id="contact">
     <a href="#contact">Contact</a>
     <a href="about.html#skills">My Skills</a>
-    <div>
+    <div class="container">
       <h2>Get in Touch</h2>
       <p>If you would like to contact me with any questions or feedback, my contact information can be found here. I welcome all inquiries! Phone:<a href="tel:2677607183">2677607183</a> or Skype me at <a href="Skype:rdev1093@gmail.com">rdev1093@gmail.com</a>. Prefer sending an email?
       </p>
