--- a/beauty-adored.html
+++ b/beauty-adored.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 <header>
-  <div>
-    <img src="https://via.placeholder.com/150x50?text=Logo" alt="Roslyn">
+  <div class="container">
+    <img src="logo.svg" alt="Logo"/ class="logo">
     <nav>
-      <ul>
+      <ul class="navigation">
         <li><a href="index.html">Work</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -24,20 +24,26 @@
   </div>
 </header>
 <main>
-  <div>
-    <div>
+  <div id="hero">
+    <div class="container">
       <h1>Beauty Adored</h1>
     </div>
   </div>
-  <div>
-    <div>
-      <picture>
-        <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-        <img src="http://via.placeholder.com/1200x800" alt="My Image">
-      </picture>
+  <div id="work">
+    <div class="container">
+      <div class="row">
+        <picture>
+          <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+            <img src="http://via.placeholder.com/1200x800" alt="My Image">
+          </picture>
+      </div>
       <p>Growing up, a lot of us in the indian community did not know how to best address our skin and hair concerns and what products would work best for our natural hair and skin tone. It was difficult to find products that matched our skin tone, sunscreen that worked for our complexion, and we did not have many resources available to help us address our skin concerns. This was a prevalent issue for my friends in my Indian community and also my friends from other communities with deeper complexions.I wanted to create an app that celebrates all complexions, and promotes inclusivity, diversity, and acts as an all in one resource where users can learn how to best meet their specific needs.</p>
       <p>The objective is to design a beauty app that provides users with an all in one resource where they can learn how to best meet their skin, hair, and makeup needs and makes finding this information and trusted resources easier.</p>
-      <h2>My Process</h2>
+      <div id="work">
+        <div class="container">
+          <h2>My Process</h2>
+        </div>
+      </div>
       <picture>
         <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
         <img src="http://via.placeholder.com/1200x800" alt="My Image">
@@ -68,13 +74,17 @@
       </picture>
       <h3>Prototype</h3>
       <p>Creating a prototype using InVision helped uncover existing user pain points, if all information was clear, if the app was easy to navigate through, and if any information was missing that users found valuable.</p>
-      <h2>Conclusion</h2>
+      <div id="work">
+        <div class="container">
+          <h2>Conclusion</h2>
+        </div>
+      </div>
       <p>Overall, following this process helped create a final product that would bridge a gap in the beauty space backed by research and user feedback.</p>
 </main>
 <footer id="contact">
   <a href="#contact">Contact</a>
   <a href="about.html#skills">My Skills</a>
-  <div>
+  <div class="container">
     <h2>Get in Touch</h2>
     <p>If you would like to contact me with any questions or feedback, my contact information can be found here. I welcome all inquiries! Phone:<a href="tel:2677607183">2677607183</a> or Skype me at <a href="Skype:rdev1093@gmail.com">rdev1093@gmail.com</a>. Prefer sending an email?
     </p>
