I fixed the first row
The two columns need to be inside the row.

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
               <img src="http://via.placeholder.com/1200x800" alt="My Image">
             </picture>
           </div>
-        </div>
-        <div class="row">
-          <h3>Beauty Adored</h3>
-          <p>When creating Beauty Adored, I took inspiration from my own experiences, conducted a competitive analysis to look at the strengths and weaknesses of current apps, and identified opportunities to fulfill an unmet need. After identifying the need, a user flow diagram, iOS, and Android wireframes, style guide, prototype, mockups, and final UI designs were created to bring the product to life.
-          </p>
-          <a href="beauty-adored.html" class="button">view project</a>
+          <div class="col-md-6">
+            <h3>Beauty Adored</h3>
+            <p>When creating Beauty Adored, I took inspiration from my own experiences, conducted a competitive analysis to look at the strengths and weaknesses of current apps, and identified opportunities to fulfill an unmet need. After identifying the need, a user flow diagram, iOS, and Android wireframes, style guide, prototype, mockups, and final UI designs were created to bring the product to life.
+            </p>
+            <a href="beauty-adored.html" class="button">view project</a>
+          </div>  
         </div>
       <div>
         <div class="row">
