--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <h2>Skills & Tools</h2>
           </div>
           <div>
-            <div>
+            <div class="col-md-6">
               <h3>Relevant Skills</h3>
               <ul>
                 <li>Ability to create user personas</li>
@@ -68,7 +68,7 @@
                 <li>Proficient in Figma, Sketch, Google Drawings to create user flows, Marvel App and InVision to create prototypes and conduct user testing, UsabilityHub to perform preference testing, Angle to create mockups, responsive design, animation in Figma, and using the Charts, Arc, and Mockup plugins in Figma</li>
               </ul>
             </div>
-            <div>
+            <div class="col-md-6">
               <h3>Tools I use</h3>
               <ul>
                 <li>Figma</li>
