update index, about, and project page layout

--- a/about.html
+++ b/about.html
@@ -11,86 +11,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<header>
-  <div class="container">
-    <img src="logo.svg" alt="Logo"/ class="logo">
-    <nav>
-      <ul class="navigation">
-        <li><a href="index.html">Work</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-<main>
-  <div>
+  <header>
+    <div class="container">
+      <a href="index.html">
+        <img src="logo.svg" alt="Logo"/ class="logo">
+      </a>
+      <nav>
+        <ul class="navigation">
+          <li><a href="index.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
     <div class="center">
       <h1>About</h1>
     </div>
-  </div>
-  <div>
     <div class="container">
       <div class="row">
         <picture>
           <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-            <img src="http://via.placeholder.com/1200x800" alt="My Image">
-          </picture>
+          <img src="http://via.placeholder.com/1200x800" alt="My Image">
+        </picture>
+        <div class="center">
+          <h2>My Story</h2>
+        </div>
+        <p>Hello, my name is Roslyn, and I am a UI designer based in Pennsylvania. Helping people, improving their lives, and being creative are passions of mine. I am dedicated to creating designs and products that go beyond creating something generic but serve to fill a gap and meet a need that is not already being met yet, all while being accessible so that everyone feels included and can enjoy them. My extensive background and experience in healthcare-related fields give me a unique insight into how to meet client's needs better and create better user experiences.</p>
+        <p>In my spare time, I enjoy spending time with family and friends, traveling, going on walks, learning new recipes and trying new food, performing dance choreographies with friends, and doing arts and crafts.</p>
+        <div class="center">
+          <a href="" class="button contact">Download my resume</a>
+        </div>
+        <div class="center">
+          <h2>Skills & Tools</h2>
+        </div>
       </div>
-      <div>
-        <div class="container">
-          <div class="center">
-            <h2>My Story</h2>
-          </div>
-          <p>Hello, my name is Roslyn, and I am a UI designer based in Pennsylvania. Helping people, improving their lives, and being creative are passions of mine. I am dedicated to creating designs and products that go beyond creating something generic but serve to fill a gap and meet a need that is not already being met yet, all while being accessible so that everyone feels included and can enjoy them. My extensive background and experience in healthcare-related fields give me a unique insight into how to meet client's needs better and create better user experiences.</p>
-          <p>In my spare time, I enjoy spending time with family and friends, traveling, going on walks, learning new recipes and trying new food, performing dance choreographies with friends, and doing arts and crafts.</p>
-          <div>
-            <div class="center">
-              <div class="row">
-                <a href="" class="button contact">Download my resume</a>
-              </div>
-            </div>
-          </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Relevant Skills</h3>
+          <ul>
+            <li>Ability to create user personas</li>
+            <li>Conduct user research</li>
+            <li>Perform competitor analysis</li>
+            <li>Sketch and build paper prototypes</li>
+            <li>Create mood and inspiration boards</li>
+            <li>Proficient in Figma, Sketch, Google Drawings to create user flows, Marvel App and InVision to create prototypes and conduct user testing, UsabilityHub to perform preference testing, Angle to create mockups, responsive design, animation in Figma, and using the Charts, Arc, and Mockup plugins in Figma</li>
+          </ul>
         </div>
-        <div>
-          <div class="center">
-            <h2>Skills & Tools</h2>
-          </div>
-          <div>
-            <div class="col-md-6">
-              <h3>Relevant Skills</h3>
-              <ul>
-                <li>Ability to create user personas</li>
-                <li>Conduct user research</li>
-                <li>Perform competitor analysis</li>
-                <li>Sketch and build paper prototypes</li>
-                <li>Create mood and inspiration boards</li>
-                <li>Proficient in Figma, Sketch, Google Drawings to create user flows, Marvel App and InVision to create prototypes and conduct user testing, UsabilityHub to perform preference testing, Angle to create mockups, responsive design, animation in Figma, and using the Charts, Arc, and Mockup plugins in Figma</li>
-              </ul>
-            </div>
-            <div class="col-md-6">
-              <h3>Tools I use</h3>
-              <ul>
-                <li>Figma</li>
-                <li>Sketch</li>
-                <li>Google Drawings</li>
-                <li>Marvel App</li>
-                <li>InVision</li>
-                <li>UsabilityHub</li>
-                <li>Angle</li>
-              </ul>
-            </div>
-          </div>
+        <div class="col-md-6">
+          <h3>Tools I use</h3>
+          <ul>
+            <li>Figma</li>
+            <li>Sketch</li>
+            <li>Google Drawings</li>
+            <li>Marvel App</li>
+            <li>InVision</li>
+            <li>UsabilityHub</li>
+            <li>Angle</li>
+          </ul>
         </div>
-       </div>
       </div>
     </div>
   </main>
   <footer>
-    <div class="container">
-      <a href="#contact">Contact</a>
-      <a href="about.html#skills">My Skills</a>
-    </div>
     <div id="contact">
       <div class="container">
         <h2>Get in Touch</h2>
@@ -117,8 +101,13 @@
             </svg>
           </a>
         </div>
+        <div class="container link">
+          <a href="#contact">Contact</a>
+          <a href="about.html#skills">My Skills</a>
+        </div>
         <p>Copyright Roslyn Devassy 2022</p>
       </div>
+    </div>
   </footer>
 </body>
 </html>
