--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
           <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
           <img src="http://via.placeholder.com/1200x800" alt="My Image">
         </picture>
+        <div class="col-lg-7">
         <div class="center">
           <h2>My Story</h2>
         </div>
@@ -43,8 +44,11 @@
         <div class="center">
           <a href="" class="button contact">Download my resume</a>
         </div>
+        </div>
+        <div class="col-lg-5">
         <div class="center">
           <h2>Skills & Tools</h2>
+        </div>
         </div>
       </div>
       <div class="row">
