incorporate JavaScript to create interactive mobile menu

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500;600&family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/5524c9a56b.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -46,9 +47,9 @@
         </div>
         </div>
         <div class="col-lg-5">
-        <div class="center">
-          <h2>Skills & Tools</h2>
-        </div>
+          <div class="center">
+            <h2>Skills & Tools</h2>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -105,7 +106,7 @@
             </svg>
           </a>
         </div>
-        <div class="container link">
+        <div class="container link social-2">
           <a href="#contact">Contact</a>
           <a href="about.html#skills">My Skills</a>
         </div>
@@ -113,6 +114,7 @@
       </div>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
