--- a/beauty-adored.html
+++ b/beauty-adored.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500;600&family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/5524c9a56b.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -112,7 +113,7 @@
             </svg>
           </a>
         </div>
-        <div class="container link">
+        <div class="container link social-2">
           <a href="#contact">Contact</a>
           <a href="about.html#skills">My Skills</a>
         </div>
@@ -120,6 +121,7 @@
       </div>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
