--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
           <div class="column col-md-6 col-lg-5">
             <h3>Beauty Adored</h3>
-            <p>When creating Beauty Adored, I took inspiration from my own experiences, conducted a competitive analysis to look at the strengths and weaknesses of current apps, and identified opportunities to fulfill an unmet need. After identifying the need, a user flow diagram, iOS, and Android wireframes, style guide, prototype, mockups, and final UI designs were created to bring the product to life.
+            <p>When creating Beauty Adored, I took inspiration from my own experiences, conducted a competitive analysis to look at the strengths and weaknesses of current apps, and identified opportunities to fulfill an unmet need in the beauty industry to be more inclusive of people of color. After identifying the need, a user flow diagram, iOS, and Android wireframes, style guide, prototype, mockups, and final UI designs were created to bring the product to life.
             </p>
             <a href="beauty-adored.html" class="button">view project</a>
           </div>
