--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>home_my work page</title>
+  <title>Roslyn Devassy's Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="img/images/favicon.ico.jpg">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,6 +27,7 @@
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
         </nav>
+      </div>
     </div>
   </header>
   <main>
@@ -48,8 +50,8 @@
         <div class="row">
           <div class="column col-md-6 col-lg-7">
             <picture>
-              <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-              <img src="http://via.placeholder.com/1200x800" alt="My Image">
+              <source srcset="img/beauty-adored/Beauty-Adored@1x.jpg" media="(max-width:767px)">
+              <img src="img/beauty-adored/Beauty-Adored@2x.jpg" alt="Image of Beauty Adored">
             </picture>
           </div>
           <div class="column col-md-6 col-lg-5">
@@ -62,8 +64,8 @@
         <div class="row">
           <div class="column col-md-6 col-lg-7">
             <picture>
-              <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-              <img src="http://via.placeholder.com/1200x800" alt="My Image">
+              <source srcset="img/flavorful/Flavorful@1x.jpg" media="(max-width:767px)">
+              <img src="img/flavorful/Flavorful@2x.jpg" alt="Image of Flavorful">
             </picture>
           </div>
           <div class="column col-md-6 col-lg-5">
@@ -102,8 +104,8 @@
             </div>
           </div>
           <div class= "column col-md-6 col-lg-5">
-            <h3>Project</h3>
-            <p>Creation of Flavorful involved analysis of two competitor apps, understanding users' patterns, frustrations, and needs, creating user personas, creating an MVP, and user flow diagram to start. The process also involved sketching and creating a paper prototype, conducting usability testing, producing wireframes, and creating mood boards to decide on a visual direction, a style guide, mockups, and the final UI and responsive designs for the app.</p>
+            <h3>My Hometown</h3>
+            <p>Growing up in Huntingdon Valley shaped who I am and my design interests, where I strive to promote diversity and inclusion. I, therefore, wanted to create an animated illustration to represent my upbringing.</p>
             <a href="" class="button">view project</a>
           </div>
         </div>
