--- a/about.html
+++ b/about.html
@@ -14,16 +14,19 @@
 <body>
   <header>
     <div class="container">
-      <a href="index.html">
-        <img src="logo.svg" alt="Logo"/ class="logo">
-      </a>
+      <div class="navtoggle" id="myNavtoggle">
+        <a href="index.html">
+          <img src="logo.svg" alt="Logo" class="logo">
+        </a>
       <nav>
         <ul class="navigation">
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
+      </div>
     </div>
   </header>
   <main>
@@ -32,27 +35,28 @@
     </div>
     <div class="container">
       <div class="row">
-        <picture>
-          <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-          <img src="http://via.placeholder.com/1200x800" alt="My Image">
-        </picture>
-        <div class="col-lg-7">
-        <div class="center">
-          <h2>My Story</h2>
+        <div class="col-lg-5">
+          <picture>
+            <source srcset="img/self-images/image-self@1x.jpg" media="(max-width:767px)">
+            <img src="img/self-images/image-self@2x.jpg" alt="My Image">
+          </picture>
         </div>
+        <div class="col-lg-7">
+          <div class="center">
+            <h2>My Story</h2>
+          </div>
         <p>Hello, my name is Roslyn, and I am a UI designer based in Pennsylvania. Helping people, improving their lives, and being creative are passions of mine. I am dedicated to creating designs and products that go beyond creating something generic but serve to fill a gap and meet a need that is not already being met yet, all while being accessible so that everyone feels included and can enjoy them. My extensive background and experience in healthcare-related fields give me a unique insight into how to meet client's needs better and create better user experiences.</p>
         <p>In my spare time, I enjoy spending time with family and friends, traveling, going on walks, learning new recipes and trying new food, performing dance choreographies with friends, and doing arts and crafts.</p>
         <div class="center">
           <a href="" class="button contact">Download my resume</a>
         </div>
         </div>
-        <div class="col-lg-5">
-          <div class="center">
-            <h2>Skills & Tools</h2>
-          </div>
-        </div>
+
       </div>
       <div class="row">
+        <div class="center">
+          <h2>Skills & Tools</h2>
+        </div>
         <div class="col-md-6">
           <h3>Relevant Skills</h3>
           <ul>
