--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-7">
             <div class="sun">
-              <svg width="281" height="178" viewBox="0 0 281 178" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg width="100%" height="100%" viewBox="0 0 281 178" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_21_62)">
               <rect y="0.263123" width="281" height="177.474" fill="#97B1B8" fill-opacity="0.15"/>
               <rect x="0.82164" y="146.515" width="280.178" height="31.2222" fill="#BCD0C2"/>
