update margin and padding

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
           </picture>
         </div>
         <div class="col-lg-7">
-          <div class="center">
+          <div class="center margin-1">
             <h2>My Story</h2>
           </div>
         <p>Hello, my name is Roslyn, and I am a UI designer based in Pennsylvania. Helping people, improving their lives, and being creative are passions of mine. I am dedicated to creating designs and products that go beyond creating something generic but serve to fill a gap and meet a need that is not already being met yet, all while being accessible so that everyone feels included and can enjoy them. My extensive background and experience in healthcare-related fields give me a unique insight into how to meet client's needs better and create better user experiences.</p>
@@ -68,7 +68,7 @@
             <li>Proficient in Figma, Sketch, Google Drawings to create user flows, Marvel App and InVision to create prototypes and conduct user testing, UsabilityHub to perform preference testing, Angle to create mockups, responsive design, animation in Figma, and using the Charts, Arc, and Mockup plugins in Figma</li>
           </ul>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 padding">
           <h3>Tools I use</h3>
           <ul>
             <li>Figma</li>
