update padding, margin, favicon, and menu for viewports

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>About Roslyn Devassy</title>
+  <link rel="icon" type="image/x-icon" href="img/images/favicon.ico.jpg">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +44,7 @@
         </div>
         <div class="col-lg-7">
           <div class="center margin-1">
-            <h2>My Story</h2>
+            <h2 id= "no-margin">My Story</h2>
           </div>
         <p>Hello, my name is Roslyn, and I am a UI designer based in Pennsylvania. Helping people, improving their lives, and being creative are passions of mine. I am dedicated to creating designs and products that go beyond creating something generic but serve to fill a gap and meet a need that is not already being met yet, all while being accessible so that everyone feels included and can enjoy them. My extensive background and experience in healthcare-related fields give me a unique insight into how to meet client's needs better and create better user experiences.</p>
         <p>In my spare time, I enjoy spending time with family and friends, traveling, going on walks, learning new recipes and trying new food, performing dance choreographies with friends, and doing arts and crafts.</p>
@@ -57,7 +58,7 @@
         <div class="center">
           <h2>Skills & Tools</h2>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 more-padding">
           <h3>Relevant Skills</h3>
           <ul>
             <li>Ability to create user personas</li>
@@ -68,7 +69,7 @@
             <li>Proficient in Figma, Sketch, Google Drawings to create user flows, Marvel App and InVision to create prototypes and conduct user testing, UsabilityHub to perform preference testing, Angle to create mockups, responsive design, animation in Figma, and using the Charts, Arc, and Mockup plugins in Figma</li>
           </ul>
         </div>
-        <div class="col-md-6 padding">
+        <div class="col-md-6 more-padding-2">
           <h3>Tools I use</h3>
           <ul>
             <li>Figma</li>
