--- a/beauty-adored.html
+++ b/beauty-adored.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Project Page</title>
+  <link rel="icon" type="image/x-icon" href="img/images/favicon.ico.jpg">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
